WPF: Added index columns for loops, markers and segments. Several bug fixes.
- Fixed colors in App.xaml; the header color was too bright compared to
OSX. Also fixed a missing animation when the mouse pointer leaves a list
view header.
- Removed previous custom cell for markers; replaced by a more standard
look like loops and segments.
- Added FixedWidthColumn for grid views.
- Added Index to Loop, Segment and Marker objects, and added code for
filling these properties in their respective presenters.
- Can now double click a marker to select it.
- Added code for File/Exit menu.

--- a/MPfm.WPF/Classes/App.xaml
+++ b/MPfm.WPF/Classes/App.xaml
@@ -6,11 +6,10 @@
     <Application.Resources>    
         <!-- Colors -->
         <Color x:Key="BackgroundColor">#FF20282E</Color>
-        <Color x:Key="HeaderBackgroundColor">#FF576B78</Color>
-        <!--<Color x:Key="SecondaryHeaderBackgroundColor">#FF323C43</Color>-->
-        <Color x:Key="SecondaryHeaderBackgroundColor">#FF455864</Color>
+        <Color x:Key="HeaderBackgroundColor">#FF455865</Color>
+        <Color x:Key="SecondaryHeaderBackgroundColor">#FF323C43</Color>
         <Color x:Key="MenuItemOverBackgroundColor">#FF323C43</Color>
-        <Color x:Key="HeaderButtonOverBackgroundColor">#FF687985</Color>
+        <Color x:Key="HeaderButtonOverBackgroundColor">#FF5A6B75</Color>
         <Color x:Key="ButtonBackgroundColor">#FFE74C3C</Color>        
         <Color x:Key="ButtonOverBackgroundColor">#FFF07568</Color>
         <Color x:Key="ListViewSelectedBackgroundColor">#FFBACCD9</Color>
@@ -589,7 +588,12 @@
                         <Grid Background="{DynamicResource BrushHeaderBackgroundColor}">
                             <VisualStateManager.VisualStateGroups>
                                 <VisualStateGroup x:Name="CommonStates">
-                                    <VisualState x:Name="Normal" />
+                                    <VisualState x:Name="Normal">
+                                        <Storyboard>
+                                            <ColorAnimation Duration="0:0:0:0.1" To="{DynamicResource HeaderBackgroundColor}" 
+                                                                Storyboard.TargetProperty="(Panel.Background).(SolidColorBrush.Color)" Storyboard.TargetName="HeaderBorder" />
+                                        </Storyboard>
+                                    </VisualState>
                                     <VisualState x:Name="MouseOver">
                                         <Storyboard>
                                             <ColorAnimation Duration="0:0:0:0.1" To="{DynamicResource HeaderButtonOverBackgroundColor}" 
